src/creator.scss
/* ... */
.CreatorAnswers label,
.AnswerDescriptions label {
  display: block;
  text-align: center;
}

.CreatorAnswers input::placeholder {
  font-size: 1.1rem;
  text-align: center;
}

.CreatorAnswers input,
.AnswerDescriptions input {
	background: rgba(0,0,0,0);
	// background: none;
	font-size: 1.75rem;
	padding: 0.5rem;
	border-radius: 4px;
	width: 100%;
	box-sizing: border-box;
	text-align: center;
	border: none;
	border-bottom: solid 2px #fff;
	outline: none;

	&.dInput {
		color: #fff;

		&.invalid {
			border-bottom: solid 2px red;
		}
	}
	&.dInput:focus {
		text-shadow: 0 0 6px rgba(0,0,0,0.65);
		background:rgba(0,0,0,0.1);
	}
	&.dInput:hover {
		text-shadow: 0 0 6px rgba(0,0,0,0.65);
		background:rgba(0,0,0,0.1);
	}
}

.dInput {
  margin-bottom: 1rem;
}

.grid-input::placeholder {
  font-size: 0.8rem !important;
}

grid-input {
  margin-bottom: 0 !important;
}

.commaWarning {
  color: red;
  font-size: 0.8rem;
  margin: 2px 0 2px 0;
}
/*colors for the blocks */
.Blue {
  background-color: rgba(107, 160, 201, 0.75);
}
.Green {
  background-color: rgba(133, 190, 100, 0.75);
}
.Yellow {
  background-color: rgba(251, 212, 0, 0.50);
}
.Pink {
  background-color: rgba(148, 87, 156, 0.75);
}
.Tan {
  background-color: rgba(226, 135, 87, 0.75);
}
.Red {
  background: rgba(226, 87, 87, 0.75)
}

.wordsPreview {
  display: grid;
}

.previewItem {
	opacity: 1;
	font-size: 1rem;
	padding: 1rem;
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: center;
	background: #efefe6;
	border-radius: 6px;
	min-height: 2rem;
	text-align: center;
	margin: 0 0.5rem 0 0.5rem;
	border: solid 2px #efefe6;

	&.valid {
		border: solid 2px #efefe6;
	}

	&.invalid {
		border: solid 2px red;
	}
}

.ContainerDimensionGroup {
	display: flex;
	flex-direction: row;
	align-items: center;
	justify-content: center;
	gap: 1rem;
	box-sizing: border-box;
	min-height: 2.8rem;
	padding: 0 1rem;

	&.widgetTitle {
		flex-grow: 1;
		justify-content: flex-start;
		padding: 0;
	}

	&.livesCount {
		background: rgba(255,255,255,0.15);
		border-radius: 0.25rem;
	}
}

.ContainerDimensionInput {
	display: flex;
	justify-content: center;
	flex-direction: row;
	text-align: center;
	gap: 1rem;
	align-items: center;
	box-sizing: border-box;
	min-height: 2.8rem;
	padding: 0 1rem;
	background: rgba(255,255,255,0.15);
	border-radius: 0.25rem;
}

.ChooseButton {
	max-width: fit-content;
	margin: 0.5rem auto;
	font-size: 1rem;
	padding: 0.5rem 1rem;
	border-radius: 2rem;
	border: none;

	cursor: pointer;

	&:disabled {
		pointer-events: none;
	}

	&:active {
		transform: scale(0.92);
	}
}

@keyframes border-pulse {
	0% {
		box-shadow: 0 0 0 0 #d9a0ff;
	}
	70% {
		box-shadow: 0 0 0 10px rgba(255,0,0, 0);
	}
	100% {
		box-shadow: 0 0 0 0 rgba(255,0,0, 0);
	}
}

.Form-dimension-container {
  display: grid;
  grid-template-columns: repeat(6, 20px);
  grid-template-rows: repeat(6, 20px);
  margin-bottom: 10px;
  grid-gap: 10px;
  min-width: 185px;
}

.Form-dimension-container .cell {
  border-radius: 6px;
  height: 20px;
  width: 20px;
  text-align: center;
  text-transform: uppercase;
  margin: 0 0.5rem 0 0.5rem;
}

.cellbg {
  background: grey;
}

.hovered {
  background: white;
}

.hidden {
  display: none !important;
}

.wordsGrid {
  display: grid;
  gap: 10px;
}

.wordsGrid .previewItem {
  display: flex;
  align-items: center;
  justify-content: center;
  background: #efefe6;
  border-radius: 6px;
  height: 2rem;
  text-align: center;
}

.wordsGrid .grid-input {
  background: transparent;
  border: none;
  text-align: center;
  width: 100%;
  height: 100%;
  font-size: 1rem;
  outline: none;
}

.dimension-status {
  display: inline;
}
.toast-container {
  position: fixed;
  top: 20px;
  right: 20px;
  z-index: 1000;
  display: none;
}

.toast-container.show {
  display: block;
}

.toast {
  font-size: 1.5rem;
  display: block;
  background-color: #333;
  color: white;
  padding: 10px;
  border-radius: 5px;
  margin-top: 5px;
  animation:
	slidein 0.5s,
	fadeout 0.5s 4.5s;
}

@keyframes slidein {
  from {
	opacity: 0;
	transform: translateX(100%);
  }
  to {
	opacity: 1;
	transform: translateX(0);
  }
}

@keyframes fadeout {
  from {
	opacity: 1;
  }
  to {
	opacity: 0;
  }
}

.arrow_box {
  position: absolute;
  background: #fbf767;
  border: 2px solid #fbf767;
  left: 53%;
  top: 48%;
  color: #151515;
  font-weight: 400;
  padding: 5px;
  height: 50px;
  width: 150px;
  margin-left: 140px;
  animation: pounce 1s infinite;
}

.arrow_box span {
  display: inline-block;
  width: 140px;
  float: right;				// NO FLOATS
  margin-top: 5px;
  margin-right: 12px;
  text-align: center;
}

.arrow_box:after,
.arrow_box:before {
  right: 100%;
  top: 50%;
  border: solid transparent;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.arrow_box:after {
  border-color: rgba(251, 247, 103, 0);
  border-right-color: #fbf767;
  border-width: 60px;
  margin-top: -60px;
}

.arrow_box:before {
  border-color: rgba(251, 247, 103, 0);
  border-right-color: #fbf767;
  border-width: 63px;
  margin-top: -63px;
}

@keyframes pounce {
  0%,
  100% {
	transform: translateX(0);
  }
  50% {
	transform: translateX(-10px);
  }
}

.arrow_box_left {
  position: absolute;
  background: #fbf767;
  border: 2px solid #fbf767;
  left: 1%;
  bottom: 16%;
  color: #151515;
  font-weight: 400;
  padding: 5px;
  height: 30px;
  width: 120px;
  margin-right: 140px;
  animation: pounce_left 1s infinite;
}

.arrow_box_left span {
  display: inline-block;
  width: 110px;
  float: left;
  margin-top: -5px;
  margin-left: 12px;
  text-align: center;
}

.arrow_box_left:after,
.arrow_box_left:before {
  left: 100%;
  top: 50%;
  border: solid transparent;
  content: ' ';
  height: 0;
  width: 0;
  position: absolute;
  pointer-events: none;
}

.arrow_box_left:after {
  border-color: rgba(251, 247, 103, 0);
  border-left-color: #fbf767;
  border-width: 30px;
  margin-top: -30px;
}
/* ... */

